# summit_ur5_project

./: .gitignore  README.md
rci_action_manager/: CMakeLists.txt  package.xml
rci_action_manager/include/rci_action_manager/controller/: controller.hpp
rci_action_manager/include/rci_action_manager/server/: action_server_base.hpp  joint_posture_server.hpp  wholebody_server.hpp
rci_action_manager/include/rci_action_manager/simulation/: simulation.hpp
rci_action_manager/launch/: robot_gazebo.launch  robot_mujoco.launch
rci_action_manager/scripts/: mm_client.py
rci_action_manager/scripts/simulation/: mujoco_launch.py
rci_action_manager/src/controller/: controller.cpp
rci_action_manager/src/server/: joint_posture_server.cpp  wholebody_server.cpp
rci_action_manager/src/simulation/: simulation.cpp
rci_holistic_controller/: CMakeLists.txt  package.xml
rci_holistic_controller/include/rci_holistic_controller/constraint/: constraint_base.hpp  constraint_equality.hpp  constraint_inequality.hpp
rci_holistic_controller/include/rci_holistic_controller/math/: math.hpp
rci_holistic_controller/include/rci_holistic_controller/robot/: robot.hpp
rci_holistic_controller/include/rci_holistic_controller/solver/: HQP_solver.hpp
rci_holistic_controller/include/rci_holistic_controller/task/: task_base.hpp  task_se3_equality.hpp
rci_holistic_controller/include/rci_holistic_controller/trajectory/: SE3_cubic.hpp  joint_cubic.hpp
rci_holistic_controller/src/constraint/: constraint_base.cpp  constraint_equality.cpp  constraint_inequality.cpp
rci_holistic_controller/src/math/: math.cpp
rci_holistic_controller/src/robot/: robot.cpp
rci_holistic_controller/src/solver/: HQP_solver.cpp
rci_holistic_controller/src/task/: task_base.cpp  task_se3_equality.cpp
rci_holistic_controller/src/trajectory/: SE3_cubic.cpp  joint_cubic.cpp
robot_description/robotiq_85_description/meshes/collision/: robotiq_85_base_link.prefab  robotiq_85_finger_link.prefab  robotiq_85_finger_tip_link.prefab  robotiq_85_inner_knuckle_link.prefab  robotiq_85_knuckle_link.prefab
robot_description/robotiq_85_description/urdf/: robotiq_85_gripper.urdf.xacro
robot_description/summit_xl_description/: summit_ur5e.urdf  summit_ur5e_rviz.urdf  summit_ur_control.urdf  ur5e.urdf  ur5e_control.urdf  ur5e_summit.xml
robot_description/summit_xl_description/config/: controller.yaml  ekf.yaml
robot_description/summit_xl_description/launch/: ur5e_rviz.launch
robot_description/summit_xl_description/meshes/bases/xls/: robotnik_logo_chasis.prefab  summit_xl_base_chapa.prefab  summit_xls_chapas_inox_tapas.prefab  summit_xls_chassis.prefab
robot_description/summit_xl_description/meshes/structures/: camera_bracket.STL  camera_bracket.prefab  camera_bracket_0.asset  camera_bracket_1.asset  camera_bracket_10.asset  camera_bracket_11.asset  camera_bracket_12.asset  camera_bracket_13.asset  camera_bracket_14.asset  camera_bracket_15.asset  camera_bracket_16.asset  camera_bracket_17.asset  camera_bracket_18.asset  camera_bracket_19.asset  camera_bracket_2.asset  camera_bracket_20.asset  camera_bracket_21.asset  camera_bracket_22.asset  camera_bracket_23.asset  camera_bracket_24.asset  camera_bracket_25.asset  camera_bracket_26.asset  camera_bracket_27.asset  camera_bracket_28.asset  camera_bracket_3.asset  camera_bracket_4.asset  camera_bracket_5.asset  camera_bracket_6.asset  camera_bracket_7.asset  camera_bracket_8.asset  camera_bracket_9.asset  top_structure_roas.prefab  top_structure_roas_0.asset  top_structure_roas_1.asset  top_structure_roas_2.asset  top_structure_roas_3.asset  top_structure_roas_4.asset  top_structure_roas_5.asset  top_structure_roas_6.asset
robot_description/summit_xl_description/robots/: summit_xls_std_joint_limited.urdf.xacro
robot_description/summit_xl_description/urdf/bases/: summit_xls_base.urdf.xacro  summit_xls_base_joint_limited.urdf.xacro
robot_description/summit_xl_description/urdf/structures/: os1_backup.urdf.xacro  roas.urdf.xacro
robot_description/universal_robots_ur5e/: obj_to_mesh.py  summit_ur5e.xml  summit_ur5e_sim.xml
robot_description/universal_robots_ur5e/sca_meshes/: base.txt  forearm.txt  shoulder.txt  upperarm.txt  wrist1.txt  wrist2.txt  wrist3.txt
robot_description/ur_description/launch/: view_ur.launch
robot_description/ur_description/meshes/ur5e/sca_meshes/: base.txt  forearm.txt  shoulder.txt  upperarm.txt  wrist1.txt  wrist2.txt  wrist3.txt
robot_description/ur_description/urdf/: ur3.urdf  ur5.xacro  ur5e.urdf
robot_description/ur_description/urdf/inc/: ur_macro.xacro
robot_description/ur_e_description/launch/: ur5e_upload.launch  view_ur5e.launch
robot_description/ur_e_description/sca_meshes/: base.txt  forearm.txt  shoulder.txt  upperarm.txt  wrist1.txt  wrist2.txt  wrist3.txt
robot_description/ur_e_description/urdf/: summit_ur5e_joint_limited_robot.urdf.xacro  ur5e.urdf.xacro  ur5e_robot.urdf.xacro
sca_pkg/: CMakeLists.txt  mesh_plot.py  package.xml
sca_pkg/include/sca_pkg/: fcl_tutorial.hpp  main.hpp
sca_pkg/include/sca_pkg/meshes/: mesh_utils.hpp
sca_pkg/include/sca_pkg/ur5e_sca_manager/: ur5e_sca_manager.hpp
sca_pkg/new_mesh/: new_mesh1.txt  new_mesh2.txt  new_mesh3.txt  new_mesh4.txt  new_mesh5.txt  new_mesh6.txt  new_mesh7.txt
sca_pkg/result/result_txt/: l1_bias.txt  l1_weight.txt  l2_bias.txt  l2_weight.txt  l3_bias.txt  l3_weight.txt  l4_bias.txt  l4_weight.txt  l5_bias.txt  l5_weight.txt
sca_pkg/result/result_txt2/: l1_bias.txt  l1_weight.txt  l2_bias.txt  l2_weight.txt  l3_bias.txt  l3_weight.txt  l4_bias.txt  l4_weight.txt  l5_bias.txt  l5_weight.txt
sca_pkg/src/: dataParse.cpp  fcl_tutorial.cpp  main.cpp  mesh_visualize.py  nn_mm_100.mat  nn_py_bce100.mat  sca_train.py  sca_train2.py  stl_to_mesh.py  test.py  test2.py  ur5_sca_bestWeight.mat
sca_pkg/src/data/: data_0.txt  data_50.txt  data_50_svm.txt
sca_pkg/src/meshes/: mesh_utils.cpp
sca_pkg/src/meshes/collision_map/: collision_map.txt  mm_collision_map.txt
sca_pkg/src/ur5e_sca_manager/: ur5e_sca_manager.cpp
(+25 files in other folders)
